syntax = "proto3";

package blog;

option go_package = "demo-cqrs-grpc/proto";

// Command Service - handles writes
service CommandService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

// Query Service - handles reads
service QueryService {
    rpc GetPost(GetPostRequest) returns (GetPostResponse);
    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
    rpc SearchPosts(SearchPostsRequest) returns (SearchPostsResponse);
}

// Messages
message Post {
    string id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    repeated string tags = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
}

// Command Messages
message CreatePostRequest {
    string title = 1;
    string content = 2;
    string author = 3;
    repeated string tags = 4;
}

message CreatePostResponse {
    string id = 1;
    bool success = 2;
}

message UpdatePostRequest {
    string id = 1;
    string title = 2;
    string content = 3;
    repeated string tags = 4;
}

message UpdatePostResponse {
    bool success = 1;
}

message DeletePostRequest {
    string id = 1;
}

message DeletePostResponse {
    bool success = 1;
}

// Query Messages
message GetPostRequest {
    string id = 1;
}

message GetPostResponse {
    Post post = 1;
}

message ListPostsRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message ListPostsResponse {
    repeated Post posts = 1;
    int32 total = 2;
}

message SearchPostsRequest {
    string query = 1;
    repeated string tags = 2;
}

message SearchPostsResponse {
    repeated Post posts = 1;
}
